--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/introduction/gradle_directories_intermediate.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/introduction/gradle_directories_intermediate.adoc
@@ -26,7 +26,7 @@ At a high level, a build includes:
 - *Build scripts*, which configure the projects and tasks
 - *Plugins*, which extend the build with reusable logic
 
-Let's first quickly review the directories in a simple Gradle project:
+Let's first quickly review the directories in a simple Gradle project to better understand the components of a build:
 
 ====
 [.multi-language-sample]
@@ -61,7 +61,7 @@ gradle-project      // <1>
 =====
 ====
 <1> *Root Directory* - Gradle Project
-<2> *Build File* - Project-level configuration
+<2> *Build Script* - Project-level configuration
 <3> *Settings File* - Project inclusion and build identity
 <4> *Gradle Files* -  Wrapper executables and version pinning
 <5> *Gradle Wrapper* - Script that automatically downloads and runs the correct Gradle version for a project
@@ -70,7 +70,7 @@ This basic Gradle build has a *root project* called `gradle-project` and contain
 
 The *settings file* in the root directory lets Gradle know about the structure of the build.
 
-The *build file* in the `app` directory contains build logic specific to the `app` subproject such as declaring dependencies.
+The *build file* in the `app` directory contains build logic specific to the `app` subproject such as declaring dependencies and applying *plugins*.
 
 [[dir:build_dir]]
 == Build Directory
@@ -174,8 +174,6 @@ gradle-project  // <1>
 <9> Usually, a project is organized into one or multiple subprojects.
 <10> Each subproject has its own Gradle build script.
 
-Consult the <<directory_layout.adoc#dir:project_root,Gradle Directories>> reference to learn more.
-
 [[gradle_user_home]]
 == Gradle User Home Directory
 
@@ -223,8 +221,6 @@ It is roughly structured as follows:
 <7> JDKs downloaded by the <<toolchains.adoc#sec:provisioning, toolchain support>>.
 <8> Distributions downloaded by the <<gradle_wrapper.adoc#gradle_wrapper_reference,Gradle Wrapper>>.
 <9> Global <<build_environment.adoc#sec:gradle_configuration_properties,Gradle configuration properties>>.
-
-Consult the <<directory_layout.adoc#dir:gradle_user_home,Gradle Directories>> reference to learn more.
 
 [.text-right]
 **Next Step:** <<multi_project_builds_intermediate.adoc#intro_multi_project_builds,Learn how to structure Multi-Project Builds>> >>
