--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/introduction/writing_tasks_intermediate.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/introduction/writing_tasks_intermediate.adoc
@@ -30,10 +30,10 @@ A *task type* defines what kind of work a *task* can do.
 It’s like a blueprint or class.
 
 Gradle includes many *built-in task types*, such as `Copy`, `Jar`, and `Test`, and you can also define your own.
-By default, a *task* is of *type* `Task` .
+By default, a *task* is of *type* link:{javadocPath}/org/gradle/api/DefaultTask.html[`DefaultTask`] .
 
 [[sec:task_registration]]
-Let’s start with a simple custom task that prints a message.
+Let’s start with a simple custom task that prints a message:
 
 ====
 include::sample[dir="snippets/tutorial/hello/kotlin", files="build.gradle.kts[]"]
@@ -42,9 +42,9 @@ include::sample[dir="snippets/tutorial/hello/groovy", files="build.gradle[]"]
 
 You just registered a *task* called `hello` of *type* `DefaultTask` and gave it an action using `doLast{}`.
 
-A task is *registered* in the build script using the link:{javadocPath}/org/gradle/api/tasks/TaskContainer.html[`TaskContainer.register()`] method, which allows it to be then used in the build logic.
+A task is *created* in the build script using the link:{javadocPath}/org/gradle/api/tasks/TaskContainer.html[`TaskContainer.register()`] method, which allows it to be then used in the build logic.
 
-When you run `./gradlew hello`, it prints your message:
+When you run the `hello` task in the command-line using `./gradlew hello`, it prints your message:
 
 [source,text]
 ----
@@ -52,13 +52,13 @@ $ ./gradlew hello
 include::{snippetsPath}/tutorial/hello/tests/hello.out[]
 ----
 
-When you register a *task* in your build script, you can:
+When you *register* (i.e. create) a *task* in your build script, you can:
 
-- Use the default *task type* (`Task`) and define the behavior inline.
+- Use the default *task type* (`DefaultTask`) and define the behavior inline.
 - Use a *built-in task type*, like `Copy`, to take advantage of pre-defined behavior.
 - Create and use a *custom task type* if you need reusable behavior across tasks.
 
-This example registers a *task* called `copyTask` which copies `\*.war` files from the `source` directory to the `target` directory using the `Copy` *built-in task type*:
+This example registers a *task* called `copyTask` which copies `\*.war` files from the `source` directory to the `target` directory using the `Copy` **built-in task type**:
 
 ====
 include::sample[dir="snippets/tasks/taskTutorial/kotlin", files="build.gradle.kts[tags=copy]"]
@@ -84,14 +84,14 @@ There are many *task types* developers can take advantage of, including `GroovyD
 
 Gradle *tasks* are a subclass of link:{javadocPath}/org/gradle/api/Task.html[`Task`].
 
-In the example below, the `HelloTask` class, a *custom task type*, is created by extending link:{javadocPath}/org/gradle/api/DefaultTask.html[`DefaultTask`]:
+In the example below, the `HelloTask` class, a *custom task type*, is created by extending link:{javadocPath}/org/gradle/api/DefaultTask.html[`DefaultTask`] (our default task type):
 
 ====
 include::sample[dir="snippets/tasks/tutorialTask/kotlin", files="build.gradle.kts[tags=hello]"]
 include::sample[dir="snippets/tasks/tutorialTask/groovy", files="build.gradle[tags=hello]"]
 ====
 
-Then, a `hello` *task* is registered with the new *type* `HelloTask`.
+The `hello` *task* is registered with the new *type* `HelloTask`.
 
 Executing our new `hello` *task* results in the following:
 
@@ -131,9 +131,10 @@ Custom tasks
 [[task_inputs_and_outputs]]
 == Task Input and Outputs
 
-For a *task* to do useful work, it typically needs some *inputs* which it uses to produce *outputs*.
+For a *custom task* to do useful work, it typically needs some *inputs* which it uses to produce *outputs*.
 
 A *task* can declare those *inputs* (files, values) and *outputs* (files it creates).
+Ideally, these inputs and outputs leverage Gradle managed types.
 This helps Gradle skip work when nothing has changed:
 
 ====
@@ -146,7 +147,7 @@ If nothing changes, the *task* is skipped.
 
 == Task Action
 
-*Task actions* are the blocks of code that define what the *task* does when it runs.
+*Task actions* are the blocks of code that define what the *custom task* does when it runs.
 
 Every *task* can have one or more actions, and they’re executed during the execution phase of the Gradle build lifecycle.
 
@@ -157,10 +158,10 @@ include::sample[dir="snippets/tutorial/hello/kotlin", files="build.gradle.kts[]"
 include::sample[dir="snippets/tutorial/hello/groovy", files="build.gradle[]"]
 ====
 
-In this example, the action is `println("Hello world!")`.
-It will run when the task is executed.
+In this example, the *action* is `println("Hello world!")`.
+It will run when the *task* is executed.
 
-Similarly, in the example below, a custom task type is created called `GreetingTask`.
+Similarly, in the example below, a *custom task type* is created called `GreetingTask`.
 The `@TaskAction` annotation marks a method that Gradle should call when the *task* of this *type* is executed:
 
 ====
@@ -226,19 +227,7 @@ Hello world!
 
 Once registered, *tasks* can be accessed via the link:{javadocPath}/org/gradle/api/tasks/TaskProvider.html[`TaskProvider`] API for further configuration.
 
-For instance, you can use this to add dependencies to a *task* at runtime dynamically:
-
-====
-include::sample[dir="snippets/tutorial/dynamicDepends/kotlin", files="build.gradle.kts[tags=app]"]
-include::sample[dir="snippets/tutorial/dynamicDepends/groovy", files="build.gradle[tags=app]"]
-
-----
-$ gradle -q task0
-include::{snippetsPath}/tutorial/dynamicDepends/tests/dynamicDepends.out[]
-----
-====
-
-Or you can add behavior to an existing *task*:
+For instance, you can add behavior to an existing *task*:
 
 [[sec:hello_world]]
 ====
@@ -257,37 +246,6 @@ When the task executes, the actions in the action list are executed in order.
 
 A task is optionally *configured* in a build script using the link:{javadocPath}/org/gradle/api/tasks/TaskCollection.html[`TaskCollection.named()`] method.
 
-The `CreateAFileTask` class is updated so that the text in the file is configurable:
-
-====
-include::sample[dir="snippets/tasks/tutorialTask/kotlin", files="build.gradle.kts[tags=class]"]
-include::sample[dir="snippets/tasks/tutorialTask/groovy", files="build.gradle[tags=class]"]
-====
-
-In the `named()` method, we find the `createAFileTask` *task* and set the text that will be written to the file.
-
-When the *task* is executed:
-
-[source,text]
-----
-$ ./gradlew createAFileTask
-
-> Configure project :app
-
-> Task :app:createAFileTask
-
-BUILD SUCCESSFUL in 5s
-2 actionable tasks: 1 executed, 1 up-to-date
-----
-
-A text file called `myfile.txt` is created in the project root folder:
-
-.myfile.txt
-[source,text]
-----
-HELLO FROM THE NAMED METHOD
-----
-
 == Task Classification
 
 There are two classes of tasks that can be executed:
@@ -296,8 +254,6 @@ There are two classes of tasks that can be executed:
 2. *Lifecycle tasks* are tasks with no actions attached: `assemble`, `build`.
 
 Typically, a *lifecycle* tasks depends on many *actionable* tasks, and is used to execute many tasks at once.
-
-Consult the <<more_about_tasks.adoc#more_about_tasks,Developing Gradle Tasks chapter>> to learn more.
 
 [.text-right]
 **Next Step:** <<plugins_intermediate.adoc#using_plugins,Learn about Plugins>> >>
