--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
@@ -194,8 +194,7 @@ Instead, use one of the following:
 
 * Use `JavaForkOptions.jvmArgs()`
 * Use `JavaForkOptions.setJvmArgs()`
-* Provide a `CommandLineArgumentProvider` to add arguments via `JavaForkOptions.getJvmArgumentProviders()`. An example can be found in the
-<<incremental_build.adoc#sec:task_input_nested_inputs,Nested inputs>> section of Incremental Build.
+* Provide a <<incremental_build.adoc#sec:task_input_nested_inputs,`CommandLineArgumentProvider`>> to add arguments via `JavaForkOptions.getJvmArgumentProviders()`.
 
 [[archives-configuration]]
 ==== Deprecation of the `archives` configuration
