--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_9.adoc
@@ -172,16 +172,18 @@ configurations.dependencyScope("implementation") {
 ====
 
 [[reporting_extension_file]]
-==== `ReportingExtension.file(String)` has been deprecated
+==== Deprecation of `ReportingExtension.file(String)`
 
-This link:{javadocPath}/org/gradle/api/reporting/ReportingExtension.html#file(String)[method] has been deprecated and will be removed in Gradle 10.0.0.
+The link:{javadocPath}/org/gradle/api/reporting/ReportingExtension.html#file(String)[`file()` method] on `ReportingExtension` has been deprecated and will be removed in Gradle 10.0.0.
 
 Use `ReportingExtension.getBaseDirectory()` with `file(String)` or `dir(String)` instead.
 
 [[reporting_extension_api_doc_title]]
-==== `ReportingExtension.getApiDocTitle()` has been deprecated
+==== Deprecation of `ReportingExtension.getApiDocTitle()`
 
-This link:{javadocPath}/org/gradle/api/reporting/ReportingExtension.html#getApiDocTitle()[method] has been deprecated and will be removed in Gradle 10.0.0. There is no direct replacement for this method.
+The link:{javadocPath}/org/gradle/api/reporting/ReportingExtension.html#getApiDocTitle()[`getApiDocTitle()` method] on `ReportingExtension` has been deprecated and will be removed in Gradle 10.0.0. 
+
+There is no direct replacement for this method.
 
 [[archives-configuration]]
 ==== Deprecation of the `archives` configuration
